Heroes: Cards container, fix visible gradient in desktop screens problem

--- a/src/styles/heroes-cards.scss
+++ b/src/styles/heroes-cards.scss
@@ -10,7 +10,7 @@
       @apply max-h-[800px] lg:max-h-none overflow-hidden;
 
       &:after {
-        @apply content-[""] absolute 
+        @apply content-[""] absolute lg:hidden 
         bg-gradient-to-t from-dark-2 to-transparent
         w-full h-20
         bottom-0 left-0
@@ -81,6 +81,9 @@
   }
   .show-all {
     @extend .btn-2-orange;
-    @apply flex  mx-auto lg:hidden my-5;
+    @apply flex justify-center mx-auto lg:hidden  
+    text-center
+    min-w-[212px] font-bold
+    my-5;
   }
 }
